# axum-admin

./: .gitignore  404.html  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: docs.yml
api-reference/: admin-app.html  cargo-doc.html  data-adapter.html  entity-admin.html  fields.html
configuration/: options.html
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/api-reference/: admin-app.md  cargo-doc.md  data-adapter.md  entity-admin.md  fields.md
docs/src/configuration/: options.md
docs/src/examples/: blog-walkthrough.md
docs/src/getting-started/: blog-example.md  installation.md  quick-start.md
docs/src/guides/: authentication.md  custom-actions.md  lifecycle-hooks.md  rbac.md
docs/src/template-customization/: minijinja-context.md  overriding-templates.md  overview.md
examples/: blog-walkthrough.html
examples/blog/: Cargo.toml  Dockerfile  docker-compose.yml
examples/blog/docker/: init.sql
examples/blog/src/: admin.rs  main.rs
examples/blog/src/migration/: m20240001_create_blog_tables.rs  m20240002_seed_blog_data.rs  mod.rs
examples/blog/templates/: home.html
getting-started/: blog-example.html  installation.html  quick-start.html
guides/: authentication.html  custom-actions.html  lifecycle-hooks.html  rbac.html
src/: adapter.rs  app.rs  auth.rs  entity.rs  error.rs  field.rs  lib.rs  middleware.rs  router.rs  storage.rs  validator.rs
src/adapters/: mod.rs  seaorm.rs  seaorm_auth.rs
src/adapters/migrations/: m20240001_auth_users.rs  m20240002_casbin_rule.rs  m20240003_auth_sessions.rs  mod.rs
src/render/: context.rs  mod.rs
src/router/: auth.rs  csrf.rs  entity.rs  helpers.rs  mod.rs  roles.rs  users.rs
static/: admin.css
template-customization/: minijinja-context.html  overriding-templates.html  overview.html
templates/: change_password.html  flash.html  forbidden.html  form.html  home.html  layout.html  list.html  list_table.html  login.html  role_edit_form.html  role_form.html  roles.html  user_form.html  users_list.html
tests/: actions.rs  auth.rs  core.rs  routes.rs  seaorm_adapter.rs  seaorm_auth.rs
