[package]
name = "axum-admin"
version = "0.1.0"
edition = "2021"
description = "A modern admin dashboard framework for Axum"
license = "MIT"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-cookies = "0.10"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
axum-test = "14"

[features]
seaorm = []
