[package]
name = "axum-admin"
version = "0.1.1"
edition = "2021"
description = "A modern admin dashboard framework for Axum"
license = "MIT"
repository = "https://github.com/rinnguyen711/axum-admin"
documentation = "https://docs.rs/axum-admin"
keywords = ["axum", "admin", "dashboard", "crud", "web"]
categories = ["web-programming::http-server", "development-tools"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-cookies = "0.10"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
minijinja = { version = "2", features = ["loader", "json"] }
form_urlencoded = "1"
regex = "1"

[dev-dependencies]
axum-test = "14"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1" }
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }

[features]
seaorm = ["dep:sea-orm", "dep:casbin", "dep:sea-orm-adapter", "dep:argon2", "dep:chrono", "dep:rand_core", "dep:sea-orm-migration"]

[dependencies.sea-orm]
version = "1"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]
optional = true

[dependencies.casbin]
version = "2"
optional = true

[dependencies.sea-orm-adapter]
version = "0.4"
optional = true

[dependencies.argon2]
version = "0.5"
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]
optional = true

[dependencies.rand_core]
version = "0.6"
optional = true

[dependencies.sea-orm-migration]
version = "1"
optional = true
