[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blog"

[dependencies]
axum-admin = { path = "../..", features = ["seaorm"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
